move Rmds to notebooks folder

--- a/notebooks/creating-dashboards-with-shiny-solutions.Rmd
+++ b/notebooks/creating-dashboards-with-shiny-solutions.Rmd
@@ -34,14 +34,14 @@ I would recommend the
 [shiny cheatsheet](https://shiny.rstudio.com/images/shiny-cheatsheet.pdf) to 
 quickly explore different input types.
 
-![all-inputs](notes/img/all-inputs.png)
+![all-inputs](../assets//all-inputs.png)
 
 
 ### Text
 
 ##### `textInput`
 
-![text-input](notes/img/text-input.png)
+![text-input](../assets//text-input.png)
 
 ```{r}
 ui <- fluidPage(
@@ -61,7 +61,7 @@ shinyApp(ui, server)
 
 #### `selectInput`
 
-![select-input-single](notes/img/select-input-single.png)
+![select-input-single](../assets//select-input-single.png)
 
 ```{r}
 ui <- fluidPage(
@@ -82,7 +82,7 @@ shinyApp(ui, server)
 
 You can allow users to select multiple items by setting `multiple = TRUE`
 
-![select-input-multiple](notes/img/select-input-multiple.png)
+![select-input-multiple](../assets//select-input-multiple.png)
 ```{r}
 ui <- fluidPage(
   # Add a select input to choose multiple animals from cat, dog and cow
@@ -152,7 +152,7 @@ shinyApp(ui, server)
 
 #### `dateInput`
 
-![date-input](notes/img/date-input.png)
+![date-input](../assets//date-input.png)
 
 ```{r}
 ui <- fluidPage(
@@ -173,7 +173,7 @@ shinyApp(ui, server)
 
 #### `dateRangeInput`
 
-![date-range-input](notes/img/date-range-input.png)
+![date-range-input](../assets//date-range-input.png)
 
 ```{r}
 ui <- fluidPage(
@@ -196,7 +196,7 @@ We've covered inputs, but without outputs, inputs aren't yet very useful in
 your app. Shiny provides a number of output types out of the box, including, 
 text, plot, table, image, and html.
 
-![cheatsheet-outputs](notes/img/cheatsheet-outputs.png)
+![cheatsheet-outputs](../assets//cheatsheet-outputs.png)
 
 
 In this section, we will learn how to create outputs, render them, and
@@ -221,7 +221,7 @@ head(babynames)
 
 #### Static
 
-![table-output](notes/img/table-output.png)
+![table-output](../assets//table-output.png)
 
 
 ```{r}
@@ -241,7 +241,7 @@ shinyApp(ui, server)
 
 #### Interactive
 
-![dt-output](notes/img/dt-output.png)
+![dt-output](../assets//dt-output.png)
 
 ```{r}
 ui <- fluidPage(
@@ -260,7 +260,7 @@ shinyApp(ui, server)
 
 #### Static
 
-![plot-output](notes/img/plot-output.png)
+![plot-output](../assets//plot-output.png)
 
 ```{r}
 ui <- fluidPage(
@@ -280,7 +280,7 @@ shinyApp(ui, server)
 
 #### Interactive
 
-![plotly-output](notes/img/plotly-output.png)
+![plotly-output](../assets//plotly-output.png)
 
 ```{r}
 ui <- fluidPage(
@@ -304,7 +304,7 @@ available to build shiny apps. For example, the `dygraphs` package provides
 functionality to display interactive, zoomable plots of time-series data.
 
 
-![output-dygraph](notes/img/dygraph-output.gif)
+![output-dygraph](../assets//dygraph-output.gif)
 
 ```{r}
 ui <- fluidPage(
@@ -342,7 +342,7 @@ access the value entered by the user as `input$name`. This is the simplest form
 of reactivity, where an `output` **reacts** automatically to the change in value
 of an `input`.
 
-![app-baby-names](notes/img/app-baby-names.gif)
+![app-baby-names](../assets//app-baby-names.gif)
 
 
 
@@ -370,7 +370,7 @@ table of the data being plotted. We will use the `renderDT()` and `DTOutput`
 functions provided by the `DT` package.
 
 
-![app-baby-names-2](notes/img/app-baby-names-2.png)
+![app-baby-names-2](../assets//app-baby-names-2.png)
 
 Copy code for the app you just created, and add an interactive table with the
 same data as the plot. As a reminder, you can add an interactive table output
@@ -494,7 +494,7 @@ outputs. This can be accomplished using `eventReactive(input$x, {expr})`, which
 delays the execution of the expression computed in `expr` until the input `x` is
 updated.
 
-![delay-actions](notes/img/delay-actions.gif)
+![delay-actions](../assets//delay-actions.gif)
 
 
 
@@ -543,7 +543,7 @@ code in `callback` is executed in response to an update to the input `x`. Let us
 now use this function to display a modal dialog with information about the app,
 when a button is clicked.
 
-![triggering-actions](notes/img/triggering-actions.gif)
+![triggering-actions](../assets//triggering-actions.gif)
 
 Copy the code for the app we just created and make two modifications:
 
@@ -594,7 +594,7 @@ aesthetically more appealing, easier to navigate, and more user-friendly.
 
 ### `sidebarLayout`
 
-![sidebar-layout](notes/img/sidebar-layout.png)
+![sidebar-layout](../assets//sidebar-layout.png)
 
 ```{r}
 ui <- fluidPage(
@@ -610,7 +610,7 @@ Let us modify the baby names explorer app we created in the **Reactive
 Expressions** section so that the input is in a side panel and the two outputs
 are in the main panel.
 
-![babynames-sidebar-layout](notes/img/babynames-sidebar-layout.png)
+![babynames-sidebar-layout](../assets//babynames-sidebar-layout.png)
 
 ```{r}
 ui <- fluidPage(
@@ -649,7 +649,7 @@ shinyApp(ui, server)
 Another useful layout uses a combination of `tabsetPanel()` and `tabPanel()` to
 arrange multiple outputs as tabs.
 
-![tabset-panel](notes/img/tabset-panel.png)
+![tabset-panel](../assets//tabset-panel.png)
 
 
 ```{r}
@@ -670,7 +670,7 @@ ui <- fluidPage(
 Let us use these layout functions to display the plot and table in different
 tabs.
 
-![babynames-tab-layout](notes/img/babynames-tab-layout.png)
+![babynames-tab-layout](../assets//babynames-tab-layout.png)
 
 Copy the code for the app we just created and modify it to display the plot
 and table in different tabs by using `tabsetPanel` and `tabPanel`.
@@ -717,7 +717,7 @@ your app. You can use the `themeSelector()` function to experiment with
 different themes, and then set `theme = shinythemes::shinytheme(theme = '___')`
 to choose a desired theme.
 
-![theme-selector](notes/img/theme-selector.png)
+![theme-selector](../assets//theme-selector.png)
 
 
 
@@ -762,7 +762,7 @@ shinyApp(ui, server)
 
 ## Build MoMa App
 
-![app-moma](notes/img/app-moma.gif)
+![app-moma](../assets//app-moma.gif)
 
 ### Explore Dataset
 
